--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
   numpy>=1.14.5
   scipy>=1.1.0
   matplotlib>=2.2.2
+  propy>=1.0.0
 python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4
 
 [options.extras_require]
