--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,8 @@ install_requires =
   scipy>=1.1.0
   matplotlib>=2.2.2
   propy>=1.0.0
+  pandas>=0.23.0
+  xsect>=1.1.0
 python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4
 
 [options.extras_require]
