--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,6 @@ keywords =
   civil-engineering
   engineering
 classifiers =
-  Programming Language :: Python :: 2.7
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Operating System :: OS Independent
@@ -33,7 +32,7 @@ install_requires =
   propy>=1.0.0
   pandas>=0.23.0
   xsect>=1.1.0
-python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4
+python_requires = >=3.5
 
 [options.extras_require]
 test =
