--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
   numpy>=1.14.5
   scipy>=1.1.0
   matplotlib>=2.2.2
-  propy>=1.0.0
+  attrs>=19.1.0
   pandas>=0.23.0
   xsect>=1.1.0
 python_requires = >=3.5
